--- a/client/src/app/dialog/addsongdialog.component.html
+++ b/client/src/app/dialog/addsongdialog.component.html
@@ -26,6 +26,9 @@
       <mat-icon class="icon-padding">add</mat-icon>
     </button>
   </div>
+  <div>
+    <search-artists></search-artists>
+  </div>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
