--- a/client/src/app/topcontent/topsongs.component.html
+++ b/client/src/app/topcontent/topsongs.component.html
@@ -1,2 +1,16 @@
-<app-cardlayout></app-cardlayout>
-<app-cardlayout></app-cardlayout>
+<table>
+    <tr>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+    </tr>
+    <tr>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+        <td><app-cardlayout></app-cardlayout></td>
+    </tr>
+</table>
