--- a/client/src/app/layout/layout.component.css
+++ b/client/src/app/layout/layout.component.css
@@ -1,3 +1,8 @@
 .card-container {
-    max-width: 400px;
-  }
+    width: 200px;
+    margin: 15px 15px 15px 15px;
+}
+.card-image{
+    max-width: inherit;
+    max-height: inherit;
+}
