--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -66,13 +66,8 @@
       </ul>
     </div>
     <div>
-      <mat-tab-group>
-        <mat-tab label="Top 10 Songs"><app-topsongs></app-topsongs> </mat-tab>
-        <mat-tab label="Top 10 Artists">
-          <app-topartists></app-topartists>
-        </mat-tab>
-      </mat-tab-group>
+      <app-topcontent></app-topcontent>
+      <router-outlet></router-outlet>
     </div>
-    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
