--- a/client/src/app/topcontent/topartists.component.html
+++ b/client/src/app/topcontent/topartists.component.html
@@ -1,1 +1,22 @@
-<p>topcontent works!</p>
+<table style="width:90%;margin: 10px 20px 10px 5%" mat-table [dataSource]="artists_list" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element; let i=index"> {{i+1}} </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="songs">
+      <th mat-header-cell *matHeaderCellDef> Songs </th>
+      <td mat-cell *matCellDef="let element"> {{element.songs}} </td>
+    </ng-container>
+    <ng-container matColumnDef="dob">
+      <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
+      <td mat-cell *matCellDef="let element"> {{element.dob}} </td>
+    </ng-container>  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
