--- a/client/src/app/layout/layout.component.css
+++ b/client/src/app/layout/layout.component.css
@@ -1,7 +1,11 @@
 .card-container {
+    margin:0;
+    height: 350px;
     width: 200px;
 }
-.card-image{
-    max-width: inherit;
-    max-height: inherit;
+
+.card-image {
+    margin: 5px 10px 5px 10px;
+    width: 180px;
+    height: 180px;
 }
