--- a/client/src/app/dialog/addartistdialog.component.html
+++ b/client/src/app/dialog/addartistdialog.component.html
@@ -1,16 +1,16 @@
 <div mat-dialog-content>
     <p>Add a New Artist</p>
-    <form>
+    <form [formGroup]="form" (ngSubmit)="submit()">
         <div>
             <mat-form-field>
                 <mat-label>Artist Name</mat-label>
-                <input matInput type="text" required>
+                <input matInput type="text" formControlName="name" required>
             </mat-form-field>
         </div>
         <div>
             <mat-form-field>
                 <mat-label>Artist Date of Birth</mat-label>
-                <input matInput [matDatepicker]="picker" required/>
+                <input matInput [matDatepicker]="picker" formControlName="dob" required/>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -18,13 +18,13 @@
         <div>
             <mat-form-field class="bio-content">
                 <mat-label>Artist Bio</mat-label>
-                <textarea matInput placeholder="Ex. What was first release..." required></textarea>
+                <textarea  formControlName="bio" matInput placeholder="Ex. What was first release..." required></textarea>
             </mat-form-field>
         </div>
         <div mat-dialog-actions style="padding: 0; justify-content: end; margin-bottom: 0;">
             <span class="toolbar-spacer"></span>
             <button color="warn" mat-button [mat-dialog-close]="true">Cancel</button>
-            <button color="primary" mat-button (click)="onNoClick()">Done</button>
+            <button type="submit" color="primary" mat-button>Done</button>
         </div>
     </form>
 </div>
